# MultiAgent-Research-And-Report-System

./: .gitignore  Dockerfile  README.Docker.md  README.md  compose.yaml  fonts.conf  pyproject.toml  requirements.txt
marrs/: app.py
marrs/graph/: supervisor.py
marrs/graph/report_team/: report_team.py
marrs/graph/research_team/: research_team.py
marrs/logger/: cloud_logger.py  dev_logger.py
marrs/notebook/: experiments.ipynb
marrs/prompts/: prompt.py
marrs/src/: main.py  routers.py
marrs/tools/: file_tool.py
marrs/utils/: config_loader.py  model_loader.py
multiAgent_research_and_report_system/: app.py
multiAgent_research_and_report_system/config/: config.yaml
multiAgent_research_and_report_system/exception/: custom_exception.py
multiAgent_research_and_report_system/graph/: supervisor.py
multiAgent_research_and_report_system/graph/report_team/: report_team.py
multiAgent_research_and_report_system/logger/: cloud_logger.py  dev_logger.py
multiAgent_research_and_report_system/nodes/: medical_research_node.py
multiAgent_research_and_report_system/notebook/: exp.ipynb  experiments.ipynb
multiAgent_research_and_report_system/prompts/: prompt.py
multiAgent_research_and_report_system/src/: supervisor_util.py
multiAgent_research_and_report_system/tools/: document_tool.py  file_tool.py  pdf_making_tool.py  search_tool.py  summary_tool.py
multiAgent_research_and_report_system/utils/: model_loader.py
session/: research.txt  summary.txt
sessions/: document_Indian_Economy_2023-10-30.md  document_indian_economy_2024-03-15.md
(+9 files in other folders)
